--- a/index.html
+++ b/index.html
@@ -415,11 +415,11 @@
                     <form id="contact" action method="GET">
                         <div class="content">
                             <div class="account">
-                                <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
-                                <input name="email" type="email" class="form-control" id="email" placeholder="E-Mail Address" required="">
+                                <input name="name" type="text" id="name" placeholder="Full Name" required="">
+                                <input name="email" type="email" id="email" placeholder="E-Mail Address" required="">
                             </div>
                             <div class="message">
-                                <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message" required=""></textarea>
+                                <textarea name="message" rows="6" id="message" placeholder="Your Message" required=""></textarea>
                             </div>
                             <div class="button">
                                 <button type="submit" id="form-submit" class="main-button">Send Message</button>
